# PycharmProjects-AzureCreateResources

./: .gitignore  main.py  pyproject.toml
azure/: create_azure_rg.py
csvHandler/: cvs_handler.py
