[tool.poetry]
name = "pycharmprojects-azurecreateresources"
version = "0.1.0"
description = ""
authors = ["Jesper Jæger"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
azure-identity = "^1.19.0"
azure-mgmt-storage = "^21.2.1"
azure-storage-blob = "^12.24.0"
azure-mgmt-resource = "^23.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
